[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transmit-python-sdk"
version = "1.0.0"
authors = [
  { name="Transmit", email="developers@transmit.com" },
]
description = "Official Python SDK for the Transmit logistics and delivery API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://transmit.com"
