[package]
name = "transmit-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Transmit <developers@transmit.com>"]
description = "Official Rust SDK for the Transmit logistics and delivery API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
